# txtl-rpsv-grid

./: .coderabbit.yml  Makefile  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml  format-and-lint.yml  run-tests.yml
src/: app.py  main.py
src/components/: __init__.py  footer.py  header.py
src/components/contents/: __init__.py  button.py  content.py  grid.py
src/static/css/: grid.css  main.css
tests/e2e/: test_launch.py
tests/ui/: test_button.py  test_compose_grid.py
